--- a/package.json
+++ b/package.json
@@ -3,12 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/react-fontawesome": "^0.1.9",
+    "@highcharts/map-collection": "^1.1.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "apexcharts": "^3.17.1",
+    "csv-parse": "^4.8.8",
+    "fusioncharts": "^3.15.1-sr.1",
+    "highcharts": "^8.0.4",
+    "highcharts-react-official": "^3.0.0",
+    "proj4": "^2.6.1",
     "react": "^16.13.1",
+    "react-apexcharts": "^1.3.6",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-fusioncharts": "^3.1.2",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.4.1",
+    "react-wordcloud": "^1.2.2",
+    "text-encoding": "^0.7.0"
   },
   "scripts": {
     "start": "react-scripts start",
